# tasks

./: .gitignore  pyproject.toml
aiohttp/: responses.txt  task.py  urls_list.txt
multiprocessing/: main.py
src/weekly_one/: binary_search.py  lru_cache.py
src/weekly_one/aiohttp/: task.py
src/weekly_one/multiprocessing/: main.py
src/weekly_one/oop/: _singleton.py  metaclass_date.py
src/weekly_one/wsgi/: app.py
src/weekly_two/: _queue.py  distributed_lock.py  docker-compose.yml  limiter.py  tasks_queue_with_db.py
wsgi/: app.py
