[project]
name = "tasks"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.14",
    "django>=5.2.4",
    "django-stubs>=5.2.2",
    "redis>=6.2.0",
    "requests>=2.32.4",
    "ruff>=0.12.5",
]
[tool.ruff.lint]
select = ['I']
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
